force-app/main/default/objects/Wire__c/Wire__c.object-meta.xml
<CustomObject>
    <description>Inbound bank wire or ACH staged from Plaid prior to being matched to a Contribution. Holds match-confidence scoring and the closest investor account.</description>
    <label>Wire</label>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Wire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>