force-app/main/default/objects/Wire__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of the incoming bank wire or ACH as reported by Plaid.</description>
    <inlineHelpText>The received amount in USD from the bank feed.</inlineHelpText>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>