force-app/main/default/objects/Wire__c/fields/Confidence_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Bucket__c</fullName>
    <description>Categorizes the match confidence into Auto-Settle (&gt;=99), Review (70-98), or Unmatched (&lt;70) to drive the matching queue.</description>
    <formula>IF(Match_Confidence__c &gt;= 99, &apos;Auto-Settle&apos;, IF(Match_Confidence__c &gt;= 70, &apos;Review&apos;, &apos;Unmatched&apos;))</formula>
    <inlineHelpText>Auto-derived band: Auto-Settle at 99+, Review at 70-98, Unmatched below 70.</inlineHelpText>
    <label>Confidence Bucket</label>
    <type>Text</type>
</CustomField>