force-app/main/default/objects/Wire__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of what the wire payment is for.</description>
    <inlineHelpText>What this wire relates to, e.g. the project the amount was invested in.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>