force-app/main/default/objects/Wire__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investing Entity</label>
    <referenceTo>Investing_Entity__c</referenceTo>
    <relationshipLabel>Wires</relationshipLabel>
    <relationshipName>Wires</relationshipName>
    <type>Lookup</type>
</CustomField>