force-app/main/default/objects/Wire__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <description>Confidence score (0-100) that this wire matches a known investor/commitment, produced by the matching engine.</description>
    <inlineHelpText>Match confidence as a percentage value (0-100). Drives the Confidence Bucket.</inlineHelpText>
    <label>Match Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>