force-app/main/default/objects/Wire__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <description>Operational status of matching this staged wire to a contribution and investor.</description>
    <inlineHelpText>Mismatch or Review while the wire is being reconciled; Matched once it is tied to a contribution and investor.</inlineHelpText>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mismatch</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>