force-app/main/default/objects/Wire__c/fields/Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The closest investing-entity account the matching engine associated with this wire.</description>
    <inlineHelpText>The investing-entity account this wire was matched to (or the closest candidate).</inlineHelpText>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Wires</relationshipLabel>
    <relationshipName>Matched_Wires</relationshipName>
    <type>Lookup</type>
</CustomField>