force-app/main/default/objects/Wire__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>Memo or reference text from the incoming bank wire, used to assist matching.</description>
    <inlineHelpText>The memo/reference line from the bank feed (e.g., &quot;DPEG MAGNOLIA&quot;).</inlineHelpText>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>