force-app/main/default/objects/Wire__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The offering the incoming funds are believed to relate to.</description>
    <inlineHelpText>Link the offering this wire&apos;s funds are intended for, if known.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Wires</relationshipLabel>
    <relationshipName>Wires</relationshipName>
    <type>Lookup</type>
</CustomField>