force-app/main/default/objects/Wire__c/fields/Received_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Received_DateTime__c</fullName>
    <description>Timestamp the wire or ACH was received, as reported by the bank feed.</description>
    <inlineHelpText>The date and time the funds were received per the bank feed.</inlineHelpText>
    <label>Received Date/Time</label>
    <type>DateTime</type>
</CustomField>