force-app/main/default/objects/Wire__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <description>Originator name as reported on the incoming bank wire or ACH.</description>
    <inlineHelpText>The sender name from the bank feed; used to match the wire to an investing entity.</inlineHelpText>
    <label>Sender Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>