force-app/main/default/objects/Wire__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Investigate</fullName>
            </value>
            <value>
                <fullName>Verify</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>