force-app/main/default/objects/Wire__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Bank transaction identifier for the incoming wire.</description>
    <inlineHelpText>The transaction id reported by the bank for this wire.</inlineHelpText>
    <label>Transaction Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>