force-app/main/default/objects/Wire__c/fields/Wire_Alias__c.field-meta.xml
<CustomField>
    <fullName>Wire_Alias__c</fullName>
    <description>Learned alias linking a recurring sender name to an investing entity, improving future auto-matching.</description>
    <inlineHelpText>Optional alias that maps this sender to a known investing entity for future matches.</inlineHelpText>
    <label>Wire Alias</label>
    <length>120</length>
    <type>Text</type>
</CustomField>