force-app/main/default/objects/Wire__c/recordTypes/Auto_Match.recordType-meta.xml
<RecordType>
    <fullName>Auto_Match</fullName>
    <active>true</active>
    <label>Auto Match</label>
</RecordType>