force-app/main/default/objects/Wire__c/recordTypes/Manual_Review.recordType-meta.xml
<RecordType>
    <fullName>Manual_Review</fullName>
    <active>true</active>
    <label>Manual Review</label>
</RecordType>