force-app/main/default/objects/Wire__c/recordTypes/Mismatch.recordType-meta.xml
<RecordType>
    <fullName>Mismatch</fullName>
    <active>true</active>
    <label>Mismatch</label>
</RecordType>