force-app/main/default/objects/Wire__c/listViews/Review_Queue.listView-meta.xml
<ListView>
    <fullName>Review_Queue</fullName>
    <columns>NAME</columns>
    <columns>Sender_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Match_Confidence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Match_Status__c</field>
        <operation>equals</operation>
        <value>Review</value>
    </filters>
    <label>Review Queue</label>
</ListView>