force-app/main/default/objects/Wire__c/listViews/Unmatched.listView-meta.xml
<ListView>
    <fullName>Unmatched</fullName>
    <columns>NAME</columns>
    <columns>Sender_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Confidence_Bucket__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Match_Status__c</field>
        <operation>equals</operation>
        <value>Unmatched</value>
    </filters>
    <label>Unmatched Wires</label>
</ListView>